# camera_ins_self_calibration

./: CMakeLists.txt  README.md
src/: visual_mapping_node.cpp
src/base/: data_typedef.h  flat_pair_map.h  kitti_parser.cpp  kitti_parser.h  tracklets.h  union_find.h
src/features/: feature_tracker.cpp  feature_tracker.h  gms_rejector.cpp  gms_rejector.h
src/sfm/: reprojective_factor.h  sfm.cpp  sfm.h
